evershop/evershop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evershop
  namespace: evershop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: evershop
  template:
    metadata:
      labels:
        app: evershop
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.96.0.10 # Kubernetes DNS service
      containers:
      - name: evershop
        image: node:18-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 3000
        command: ["/bin/sh", "-c"]
        args:
          - |
            mkdir -p /app
            cd /app
            export COREPACK_ENABLE_DOWNLOAD_PROMPT=0 && corepack enable && yarn -v
            yarn init --name evershop-app
            yarn add @evershop/evershop
            yarn add http-server
            echo "{ pod_name: '$POD_NAME' }" > pod_name.json
            echo "Starting HTTP server on port 3000..."
            npx http-server -p 3000
---
apiVersion: v1
kind: Service
metadata:
  name: evershop
  namespace: evershop
spec:
  selector:
    app: evershop
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
  externalTrafficPolicy: Local
